--- a/PPl3/Views/Home/Detail.cshtml
+++ b/PPl3/Views/Home/Detail.cshtml
@@ -22,7 +22,7 @@
     <link href="~/ExtraFiles/assets/css/style_v1.css?v=3" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/seller_profile.css?v=2" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/Sign_Log_v1.css?v=1" rel="stylesheet" />
-    <link href="~/ExtraFiles/assets/css/product.css?v=8" rel="stylesheet" />
+    <link href="~/ExtraFiles/assets/css/product.css?v=9" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -189,30 +189,7 @@
                                 <div class="row no-gutter">
                                     <div class="col l-8 m-8 c-12 about_container">
                                         <span>@property.p_description.Substring(0, 50)</span>
-                                        @*<div class="first_about">
-                                            <p>@property.p_description.Substring(0 , 50)</p>
-                                        </div>
-                                        <div class="article_body">
-                                            <span>...............</span>
-                                            <p>@property.p_description</p>
-                                        </div>
-                                        <div class="other">
-                                            <span>Other things to note</span>   
-                                            <p>-We strictly DO NOT allow a group of more than 8 people. In case of a group of 4 or more, you might be purposefully allotted different dorm rooms. Further, if the group behaviour is deemed unfit at the property, the Zostel Property Manager, upon subjective evaluation, retains the full right to take required action which may also result in an on-spot cancellation without refunds.</p>
-                                            <p>- Children below 18 years of age are not permitted entry/stay at any of our hostels, with or without guardians. We do not recommend families.</p>
-                                            <p>- Our standard check-in time is 12 PM and the standard check-out time is 10 AM.</p>
-                                            <p>- We only accept a government ID as valid identification proof. No local IDs shall be accepted at the time of check-in.</p>
-                                            <p>- Guests are not permitted to bring outsiders inside the hostel campus.</p>
-                                            <p>- We believe in self-help and do not provide luggage assistance or room services.</p>
-                                            <p>- Drugs and any substance abuse is strictly banned inside and around the property.</p>
-                                            <p>- Alcohol consumption is strictly prohibited in and around the property premises.</p>
-                                            <p>- Right to admission reserved. </p>
-                                        </div>*@
-
-                                        @*<div class="note">
-                                            <span>NOTE:</span>
-                                            <p>Online maps are hardly reliable in the valley. Don’t hesitate to call the property for directions. You will receive the relevant contact details and detailed directions along with your booking confirmation voucher.</p>
-                                        </div>*@
+                                       
                                     </div>
                                     <div class="col l-12 m-12 c-12 show_more_about">
                                         <button>Show more<i class="fa-solid fa-chevron-right"></i></button>
@@ -233,7 +210,7 @@
                                             <div class="img_bedroom" style="background : url(@item.pa_description) top center /cover no-repeat">
                                             </div>
                                             <span>@item.amenity.amenity_name</span>
-                                            @*<p>@item.</p>*@
+                                           
                                         </div>
 
                                     }
@@ -262,14 +239,7 @@
                                             }
                                             count++;
                                         }
-                                        @*<div class="offer_item">
-                                            <i class="fa-solid fa-car"></i>
-                                            <span>Free parking on premises</span>
-                                        </div>
-                                        <div class="offer_item">
-                                            <i class="fa-solid fa-smoking"></i>
-                                            <span>Smoking allowed</span>
-                                        </div>*@
+                                        
                                     </div>
                                     <div class="col l-4 m-12 c-12 offer_list">
                                         @{ 
@@ -396,7 +366,7 @@
                                     </div>
                                 </div>
                                 <div class="pay_footer">
-                                    <button>Check Availabitily</button>
+                                    <button><a href="/user/homeuser/login" class="pay_btn">Check Availabitily</a></button>
                                 </div>
 
                                 <div class="total">
@@ -411,13 +381,7 @@
                     </div>
 
                     <div class="col l-12 m-12 c-12 comment">
-                        <!-- No Comment -->
-                        <!-- <div class="review_yet">
-                            <h2>No reviews (yet)</h2>
-                            <p><i class="fa-regular fa-star"></i>This host has 1,256 reviews for other places to stay.<a href="">Show other reviews</a></p>
-                        </div> -->
-                        <!-- Comment -->
-                        <!-- Comment -->
+                       
                         <div class="gird wide">
                             <div class="row no-gutter comment_list">
                                 <div class="col l-12 m-12 c-12 review_yet">
@@ -793,3 +757,7 @@
     <script src="~/ExtraFiles/JS/calendar.js?v=1"></script>
 </body>
 </html>
+
+
+
+
