--- a/PPl3/Areas/User/Views/HomeUser/Trip.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Trip.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<PPl3.Models.booking>
 @{
     Layout = null;
 }
@@ -80,43 +80,84 @@
                                 </div>
                             </div>
                         </div>
-                        @foreach (var item in p_user.bookings.ToList())
+                        @foreach (var item in Model.ToList())
                         {
-                            <div class="col l-12 m-12 c-12">
-                                <div class="hotel_container" onclick="window.location.href = '/user/homeuser/detail?id=@item.property_id'">
-                                    <div class="img_hotel" style="background : url(@item.property.property_images.FirstOrDefault().pi_image) top center /cover no-repeat">
+                            if(DateTime.Now >= item.check_in_date && DateTime.Now <= item.check_out_date) { 
+                                <div class="col l-12 m-12 c-12">
+                                    <div class="hotel_container">
+                                        <div class="img_hotel" style="background : url(@item.property.property_images.FirstOrDefault().pi_image) top center /cover no-repeat">
 
-                                    </div>
-                                    <div class="infor_hotel">
-                                        <div class="name_hotel">
-                                            <span>@item.property.p_name , @item.property.p_address</span>
-                                            @{
-                                                double sum = 0;
-                                                foreach (var row in item.property.property_reviews.ToList())
-                                                {
-                                                    sum = sum + double.Parse(row.overall_rating);
+                                        </div>
+                                        <div class="infor_hotel">
+                                            <div class="name_hotel">
+                                                <span>@item.property.p_name , @item.property.p_address</span>
+                                                @{
+                                                    double sum = 0;
+                                                    foreach (var row in item.property.property_reviews.ToList())
+                                                    {
+                                                        sum = sum + double.Parse(row.overall_rating);
+                                                    }
+                                                    sum = sum / item.property.property_reviews.ToArray().Length;
                                                 }
-                                                sum = sum / item.property.property_reviews.ToArray().Length;
-                                            }
-                                            <p><i class="fa-solid fa-star"></i>@sum</p>
-                                        </div>
-                                        <div class="date_check">
-                                            <p><i class="fa-solid fa-circle" style="color: greenyellow; margin-right: 5px; font-size: 10px;"></i>Check-In: <span class="check_in">@item.check_in_date.Value.ToString("dd/MM/yyyy")</span></p>
-                                            <p><i class="fa-solid fa-circle" style="color: #ff385c; margin-right: 5px; font-size: 10px;"></i>Check-Out: <span class="check_out">@item.check_out_date.Value.ToString("dd/MM/yyyyy")</span></p>
-                                        </div>
-                                        <div class="price">
-                                            @{ 
-                                                TimeSpan difference = (item.check_out_date.Value - item.check_in_date.Value);
-                                                int daysDifference = (int)difference.TotalDays;
-                                   
-                                                sum = daysDifference * (double)item.property.price;
+                                                <p><i class="fa-solid fa-star"></i>@sum</p>
+                                            </div>
+                                            <div class="date_check">
+                                                <p><i class="fa-solid fa-circle" style="color: greenyellow; margin-right: 5px; font-size: 10px;"></i>Check-In: <span class="check_in">@item.check_in_date.Value.ToString("dd/MM/yyyy")</span></p>
+                                                <p><i class="fa-solid fa-circle" style="color: #ff385c; margin-right: 5px; font-size: 10px;"></i>Check-Out: <span class="check_out">@item.check_out_date.Value.ToString("dd/MM/yyyyy")</span></p>
+                                            </div>
+                                            <div class="price">
+                                                @{
+                                                    TimeSpan difference = (item.check_out_date.Value - item.check_in_date.Value);
+                                                    int daysDifference = (int)difference.TotalDays;
 
-                                            }
-                                            <p>Price: <span>$@sum</span></p>
+                                                    sum = daysDifference * (double)item.property.price;
+
+                                                }
+                                                <p>Price: <span>$@sum</span></p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            
+                            }
+                            else { 
+                                <div class="col l-12 m-12 c-12">
+                                    <div class="hotel_container" onclick="window.location.href = '/user/homeuser/detail?id=@item.property_id&bookingId=@item.id'">
+                                        <div class="img_hotel" style="background : url(@item.property.property_images.FirstOrDefault().pi_image) top center /cover no-repeat">
+
+                                        </div>
+                                        <div class="infor_hotel">
+                                            <div class="name_hotel">
+                                                <span>@item.property.p_name , @item.property.p_address</span>
+                                                @{
+                                                    double sum = 0;
+                                                    foreach (var row in item.property.property_reviews.ToList())
+                                                    {
+                                                        sum = sum + double.Parse(row.overall_rating);
+                                                    }
+                                                    sum = sum / item.property.property_reviews.ToArray().Length;
+                                                }
+                                                <p><i class="fa-solid fa-star"></i>@sum</p>
+                                            </div>
+                                            <div class="date_check">
+                                                <p><i class="fa-solid fa-circle" style="color: greenyellow; margin-right: 5px; font-size: 10px;"></i>Check-In: <span class="check_in">@item.check_in_date.Value.ToString("dd/MM/yyyy")</span></p>
+                                                <p><i class="fa-solid fa-circle" style="color: #ff385c; margin-right: 5px; font-size: 10px;"></i>Check-Out: <span class="check_out">@item.check_out_date.Value.ToString("dd/MM/yyyyy")</span></p>
+                                            </div>
+                                            <div class="price">
+                                                @{
+                                                    TimeSpan difference = (item.check_out_date.Value - item.check_in_date.Value);
+                                                    int daysDifference = (int)difference.TotalDays;
+
+                                                    sum = daysDifference * (double)item.property.price;
+
+                                                }
+                                                <p>Price: <span>$@sum</span></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>                  
+                            }
+                            
                         }
                         
                     </div>
