--- a/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
@@ -79,10 +79,10 @@
                             <ul class="menu_user js_menu_user">
                                 <li class=""><button>Messages</button></li>
                                 <li class=""><button>Notifications</button></li>
-                                <li class=""><a href="/user/homeuser/trip">Trips</a></li>
+                                <li class=""><a href="/user/homeuser/trip">Trip</a></li>
                                 <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
                                 <li><a href="Content">Manage listings</a></li>
-                                <li><a href="#">Account</a></li>
+                                <li><a href="/user/homeuser/editprofile">Account</a></li>
                                 <li><a href="#">Gift Cards</a></li>
                                 <li><a href="#">Help Center</a></li>
                                 <li class="user_log_out"><a href="/user/homeuser/Logout">Log out</a></li>
