--- a/PPl3/Areas/User/Views/HomeUser/wishList.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/wishList.cshtml
@@ -58,7 +58,7 @@
                                 <li class=""><a href="/user/homeuser/trip">Trip</a></li>
                                 <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
                                 <li><a href="Content">Manage listings</a></li>
-                                <li><a href="#">Account</a></li>
+                                <li><a href="/user/homeuser/editprofile">Account</a></li>
                                 <li><a href="#">Gift Cards</a></li>
                                 <li><a href="#">Help Center</a></li>
                                 <li class="user_log_out"><a href="/user/homeuser/Logout">Log out</a></li>
